--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -524,6 +524,10 @@ textarea {
         .nav .menu > li a:hover {
           color: #ddd; }
 
+footer {
+  padding: 20px;
+  border-top: 1px solid #e5e5e5; }
+
 .main {
   width: 100%;
   padding: 20px 0;
@@ -538,10 +542,6 @@ textarea {
       display: table; }
     .main .main-wrapper:after {
       clear: both; }
-    .main .main-wrapper footer {
-      margin-top: 20px;
-      padding-top: 20px;
-      border-top: 1px dashed #ccc; }
 
 .new-post-btn {
   display: inline-block;
@@ -570,9 +570,11 @@ textarea {
     border-bottom: 1px solid #e8e8e8;
     position: relative;
     width: 100%;
-    padding: 1% 0px; }
-    .topic-list li h2 a {
-      color: #111; }
+    padding: 10px; }
+    .topic-list li h2 {
+      margin: 0; }
+      .topic-list li h2 a {
+        color: #111; }
 
 .topic-tags {
   color: #666; }
@@ -685,8 +687,8 @@ textarea {
     border-radius: 3px; }
 
 /*
-* settings
-*/
+ * settings
+ */
 #show-avatar, #current-avatar {
   width: 100px;
   height: 100px;
@@ -697,8 +699,8 @@ textarea {
   border-radius: 3px; }
 
 /*
-* new topic
-*/
+ * new topic
+ */
 #new-topic {
   font-size: 16px;
   margin-top: 50px; }
@@ -754,6 +756,9 @@ i.loading {
   height: 20px;
   display: inline-block;
   background: url(../img/s_loading.gif) no-repeat center center; }
+
+.message-list li {
+  padding: 10px 0; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
