--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -122,13 +122,12 @@ footer{
 }
 
 .reg-form,.login-form{
-    width:60%;
-    margin-left:30%;
+    text-align:center;
     .row{
         margin:50px 0px; 
     }
     input[type="text"],input[type="password"]{
-        width:200px;
+        width:50%;
         padding:10px;
         font-size:16px;
         height:20px; 
@@ -150,7 +149,6 @@ footer{
     }
     .act{
         button{
-            margin-left:52px;
             height:50px;     
             padding:0 30px;
             border:none;
