--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -126,14 +126,14 @@ footer{
     margin:0 20%;
     .row{
         position:relative;
-        margin:20px 0 0 0; 
+        margin:10px 0 0 0; 
         height:80px;
     }
     input[type="text"],input[type="password"]{
         position:absolute;
         left:50px;
         width:80%;
-        padding:10px;
+        padding:10px 2%;
         font-size:16px;
         height:20px; 
         line-height:20px;
@@ -145,6 +145,7 @@ footer{
         vertical-align:middle;
     }
     label{
+        text-align:center;
         position:absolute;
         left:0;
         width:50px;
@@ -169,7 +170,12 @@ footer{
             color:#fff;
             background:$global-color;
             @include border-radius(3px);
-        } 
+        }
+    }
+    .loading{
+        position:absolute; 
+        left:50px;
+        top:50px;
     }
 }
 /*
