--- a/public/sass/reset.scss
+++ b/public/sass/reset.scss
@@ -13,6 +13,14 @@ body{
     background:$body-bg;
     width:100%;
     color:$font-color;
+    a{
+        color:$font-color;
+        &:hover{
+            text-decoration:none;
+            color:#999; 
+        }
+    }
+
 }
 
 //Links
