--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -483,9 +483,14 @@ textarea {
       border: 1px solid #ddd;
       height: 20px;
       padding: 5px;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
-      vertical-align: middle; }
+      vertical-align: middle;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+      border-radius: 3px; }
     .nav .search-form button {
       display: inline-block;
       vertical-align: middle;
