--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -17,7 +17,7 @@ $nav-link-color:$global-color;
         .logo{
             float:left; 
         }
-        @include center-block(); 
+        @include center-block();
         height:$nav-container-height;
         padding:0 2%;
         position:relative;
@@ -37,9 +37,10 @@ $nav-link-color:$global-color;
             border:1px solid #ddd;
             height:20px;
             padding:5px;
-            font-size:16px;
+            font-size:14px;
             font-weight:bold;
             vertical-align:middle;
+            @include border-radius(3px);
         }
         button{
             display:inline-block;
