update rich editor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,10 +222,17 @@ footer {
     padding: 0 2%;
     font-weight: bold; }
   #new-topic #new-topic-content {
-    width: 95%;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    width: 99%;
     height: 300px;
-    padding: 2%;
-    resize: vertical; }
+    resize: vertical;
+    background: #fff; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
