--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -222,10 +222,13 @@ footer{
         font-weight:bold;
     }
     #new-topic-content{
-        width:95%;
+        margin:10px 0;
+        border:1px solid #ccc;
+        @include border-radius(3px); 
+        width:99%;
         height:300px;
-        padding:2%;
         resize:vertical;
+        background:#fff;
     }
     button[type=submit]{
         width:100px; 
