--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -603,6 +603,20 @@ footer {
 .topic-content {
   margin: 20px 0;
   font-size: 14px; }
+  .topic-content ul {
+    list-style-type: disc;
+    list-style-position: inside; }
+  .topic-content ol {
+    list-style-type: decimal;
+    list-style-position: inside; }
+  .topic-content ul ul, .topic-content ol ul {
+    list-style-type: circle;
+    list-style-position: inside;
+    margin-left: 15px; }
+  .topic-content ol ol, .topic-content ul ol {
+    list-style-type: lower-latin;
+    list-style-position: inside;
+    margin-left: 15px; }
 
 #replyContent {
   width: 97%;
