--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -76,6 +76,24 @@ footer{
 .topic-content{
     margin:20px 0;
     font-size:14px;
+    ul { 
+        list-style-type: disc;
+        list-style-position: inside; 
+    }
+    ol { 
+       list-style-type: decimal; 
+       list-style-position: inside; 
+    }
+    ul ul, ol ul { 
+       list-style-type: circle; 
+       list-style-position: inside; 
+       margin-left: 15px; 
+    }
+    ol ol, ul ol { 
+       list-style-type: lower-latin; 
+       list-style-position: inside; 
+       margin-left: 15px; 
+    }
 }
 #replyContent{
     width:97%;
