--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,6 +266,10 @@ footer {
   background: #fff;
   display: none; }
 
+.more-trigger {
+  text-align: center;
+  cursor: pointer; }
+
 .more {
   height: 32px;
   padding: 0;
@@ -284,6 +288,12 @@ i.loading {
   height: 20px;
   display: inline-block;
   background: url(../img/s_loading.gif) no-repeat center center; }
+
+.pager {
+  text-align: center; }
+  .pager .pager-wrapper li {
+    float: left;
+    margin-right: 10px; }
 
 .message-list li {
   padding: 10px 0; }
