--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,6 +1,6 @@
 //font
 //-----------------------
-$font:12px/1.5 "Microsoft Yahei";
+$font:12px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
 $font-color:#272727;
 //colors
 //-----------------------
