--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,5 @@
 html {
-  font: 12px/1.5 "Microsoft Yahei"; }
+  font: 12px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 body {
   margin: 0;
