--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -34,7 +34,8 @@ $nav-link-color:$global-color;
             position:absolute; 
             right:40%;
             color:#000;
-            top:20px;
+            top:18px;
+            font-size:14px;
         }
         width:50%;
         margin-left:2%;
