--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,7 +1,7 @@
 //font
 //-----------------------
 $font:12px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
-$font-color:#272727;
+$font-color:#999;
 //colors
 //-----------------------
 
@@ -10,8 +10,8 @@ $body-bg:#fff;
 
 //link color
 //-----------------------
-$link-color:blue;
-$link-hover-color:red;
+$link-color:#4083AA;
+$link-hover-color:#205F7E;
 
 //form
 $input-color-placeholder:#ddd;
