--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -32,7 +32,8 @@
       position: absolute;
       right: 40%;
       color: #000;
-      top: 20px; }
+      top: 18px;
+      font-size: 14px; }
     .nav .search-form .search {
       display: inline-block;
       width: 60%;
