--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,13 @@
 footer {
+  color: #999;
   padding: 20px;
   border-top: 1px solid #e5e5e5;
   height: 30px;
   line-height: 30px; }
+  footer a {
+    color: #999; }
+    footer a:hover {
+      color: #666; }
   footer p {
     display: inline-block; }
   footer .ft-meta {
@@ -147,6 +152,7 @@ footer {
     color: #ccc; }
 
 .reg-form, .login-form {
+  font-size: 14px;
   width: 60%;
   margin: 0 20%; }
   .reg-form .row, .login-form .row {
@@ -271,23 +277,8 @@ footer {
   cursor: pointer; }
 
 .more {
-  height: 32px;
-  padding: 0;
-  margin: 0;
-  background: url(../img/loading.gif) no-repeat center center; }
-
-.s_more {
-  height: 20px;
-  padding: 0;
-  margin: 0;
-  background: url(../img/s_loading.gif) no-repeat center center; }
-
-i.loading {
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  background: url(../img/s_loading.gif) no-repeat center center; }
+  text-align: center;
+  font-size: 16px; }
 
 .pager {
   text-align: center; }
