--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -90,3 +90,23 @@
         color: #999; }
         .nav .menu > li a:hover {
           color: #ddd; }
+
+footer {
+  color: #999;
+  padding: 20px;
+  border-top: 1px solid #e5e5e5;
+  height: 30px;
+  line-height: 30px; }
+  footer a {
+    color: #999; }
+    footer a:hover {
+      color: #666; }
+  footer p {
+    display: inline-block; }
+  footer .ft-meta {
+    margin-left: 10px;
+    vertical-align: middle;
+    display: inline-block; }
+    footer .ft-meta li {
+      float: left;
+      margin-right: 10px; }
