--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,3 @@
-footer {
-  color: #999;
-  padding: 20px;
-  border-top: 1px solid #e5e5e5;
-  height: 30px;
-  line-height: 30px; }
-  footer a {
-    color: #999; }
-    footer a:hover {
-      color: #666; }
-  footer p {
-    display: inline-block; }
-  footer .ft-meta {
-    margin-left: 10px;
-    vertical-align: middle;
-    display: inline-block; }
-    footer .ft-meta li {
-      float: left;
-      margin-right: 10px; }
-
 .main {
   width: 100%;
   padding: 20px 0;
@@ -32,6 +12,22 @@ footer {
       display: table; }
     .main .main-wrapper:after {
       clear: both; }
+
+.content {
+  float: left;
+  width: 680px;
+  padding: 10px; }
+
+.sidebar {
+  width: 280px;
+  padding: 10px;
+  float: left; }
+  .sidebar .mod {
+    margin: 20px 0; }
+  .sidebar .ad {
+    width: 100%; }
+    .sidebar .ad img {
+      max-width: 100%; }
 
 .new-post-btn {
   display: inline-block;
@@ -59,7 +55,6 @@ footer {
   .topic-list li {
     border-bottom: 1px solid #e8e8e8;
     position: relative;
-    width: 100%;
     padding: 10px; }
     .topic-list li h2 {
       margin: 0; }
