--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -57,11 +57,12 @@
     width:100%;
     overflow:hidden;
     li{
+        @include clearfix();
         border-bottom:1px solid #e8e8e8;
         position:relative;
         padding:10px;
         h2{
-            margin:0;
+            margin:0 0 0 10px;
             a{
                 color:#111; 
             }
