--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -16,6 +16,8 @@ $link-hover-color:#205F7E;
 //form
 $input-color-placeholder:#ddd;
 
-$global-color:#E60000;
+$global-color:#be1931;
 
 $border-color:#f0f0f0;
+
+$action-green:#57AD69;
