--- a/public/css/style.css
+++ b/public/css/style.css
@@ -353,3 +353,18 @@
       height: 20px;
       line-height: 20px;
       font-size: 16px; }
+
+.g-tip {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  position: fixed;
+  top: 60px;
+  width: 20%;
+  left: 40%;
+  line-height: 40px;
+  text-align: center;
+  background: #333;
+  color: #fff; }
