--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -67,9 +67,6 @@
                 color:#111; 
             }
         }
-        p{
-
-        }
     }
 }
 //detail
@@ -314,11 +311,23 @@
 }
 //pager
 .pager{
-    text-align:center;
+    margin:20px 0;
     .pager-wrapper{
+        @include clearfix();
         li{
-            float:left; 
+            line-height:40px;
+            height:40px;
+            float:left;
             margin-right:10px;
+            a{
+                color:#111;
+                font-size:40px; 
+                &.cur{
+                    color:red; 
+                }
+                &.nums{
+                }
+            }
         }    
     }
 }
